--- a/src/style.scss
+++ b/src/style.scss
@@ -176,6 +176,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
+                padding: 10px;
             }
 
             .chatIcons{
@@ -185,6 +186,100 @@
                 img{
                     height: 24px;
                     cursor: pointer;
+                }
+            }
+            
+            .messages{
+                background-color: rgb(206, 216, 238);
+                padding: 10px;
+                height: calc(100% - 160px);
+                overflow: scroll;
+
+                .message{
+                    display: flex;
+                    gap: 20px;
+                    margin-bottom: 20px;
+
+                    .messageInfo{
+                        display: flex;
+                        flex-direction: column;
+                        color: gray;
+                        font-weight: 300;
+                        img{
+                            width: 40px;
+                            height: 40px;
+                            border-radius: 50%;
+                            object-fit: cover;
+                        }
+                    }
+                    .messageContent{
+                        max-width: 80%;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 10px;
+
+                        p{
+                            background-color: white;
+                            padding: 10px;
+                            border-radius: 0px 10px 10px 10px;
+                        }
+                        img{
+                            width: 50%;
+                        }
+                    }
+                    &.owner{
+                        flex-direction: row-reverse;
+
+                        .messageContent{
+                            align-items: flex-end;
+                        }
+                        p{
+                            background-color: rgb(94, 139, 238);
+                            padding: 10px 20px;
+                            border-radius: 10px 0px 10px 10px;
+                            max-width: max-content;
+                        }
+                    }
+                }
+            }
+
+            .input{
+                height: 50px;
+                background-color: white;
+                padding: 10px;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                input{
+                    width: 100%;
+                    border: none;
+                    outline: none;
+                    color: rgb(38, 50, 45);
+                    font-size: 18px;
+
+                    &::placeholder{
+                        color: lightgray;
+                    }
+                }
+
+                .send{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+
+                    img{
+                        height: 24px;
+                        cursor: pointer;
+                    }
+
+                    button{
+                        border: none;
+                        padding: 10px 15px;
+                        color: white;
+                        background-color: rgb(91, 144, 249);
+                        border-radius: 5px;
+                    }
                 }
             }
         }
