--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,20 @@
+@mixin mobile{
+    @media screen and (max-width:480px) {
+        @content
+    }
+}
+@mixin tablet{
+    @media screen and (max-width:768px) {
+        @content
+    }
+}
+@mixin laptop{
+    @media screen and (max-width:1200px) {
+        @content
+    }
+}
+
+
 .formContainer{
     background-color:rgb(130, 237, 190);
     height: 100vh;
@@ -81,10 +98,14 @@
         height: 80%;
         display: flex;
         overflow: hidden;
+        @include tablet{
+            width: 90%;
+        }
 
         .sidebar{
             flex: 1;
             background-color: rgb(47, 58, 80);
+            position: relative;
 
             .navbar{
                 display: flex;
@@ -97,6 +118,9 @@
 
                 .logo{
                     font-weight: bold;
+                    @include tablet{
+                        display: none;
+                    }
                 }
                 .user{
                     display: flex;
@@ -114,6 +138,10 @@
                         background-color: rgb(39, 93, 200);
                         color: rgb(248, 224, 192);
                         cursor: pointer;
+                        @include tablet{
+                            position: absolute;
+                            bottom: 10px;
+                        }
                     }
                 }
             }
